# todos_from_scratch_2

./: README.md  app.py  database_persistence.py  pyproject.toml  schema.sql
static/css/: style.css
templates/: edit_list.html  layout.html  list.html  lists.html  new_list.html
todos/: database_persistence.py  utils.py
